--- a/fundamentos-Flex-Wrap.html
+++ b/fundamentos-Flex-Wrap.html
@@ -70,7 +70,7 @@
       <div class="item orange">4</div>
   </div>
 
-  <h1>wrap</h1>
+  <h1>wrap-reverse</h1>
 
   <div class="flex-container wrap-reverse">
       <div class="item greer">1</div>
